@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2983 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.2984 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -163,3 +163,4 @@ Changes from NetBSD 10.0 to NetBSD 11.0:
 	gcc(1): Import GCC 10.5.  [mrg 20230710]
 	dhcpcd: Import version 10.0.2. [roy 20230719]
 	bta2dpd(8): Add throttle when playing from file. [nat 20230720]
+	build: Force MKSTRIPSYM=no if MKDEBUG=yes.
